@@ -13,12 +13,44 @@ require(dirname(__FILE__) . '/../../pdo/tests/pdo_test.inc');
 
 $dbh = PDOTest::factory();
 
-echo "Test connect: (value is ignored & has no effect)\n";
+echo "Test connect\n";
 putenv('PDOTEST_ATTR='.serialize(array(PDO::ATTR_PREFETCH=>101)));
 $dbh = PDOTest::factory();
 
-echo "Test set: (value is ignored & has no effect)\n";
+echo $dbh->getAttribute(PDO::ATTR_PREFETCH), "\n";
+
+// Verify can fetch
+$s = $dbh->prepare("select dummy from dual" );
+$s->execute();
+while ($r = $s->fetch()) {
+    echo $r[0] . "\n";
+}
+
+echo "Test set 102\n";
 $dbh->setAttribute(PDO::ATTR_PREFETCH, 102);
+echo $dbh->getAttribute(PDO::ATTR_PREFETCH), "\n";
+
+// Verify can fetch
+$s = $dbh->prepare("select dummy from dual" );
+$s->execute();
+while ($r = $s->fetch()) {
+    echo $r[0] . "\n";
+}
+
+echo "Test set -1: (Uses 0)\n";
+$dbh->setAttribute(PDO::ATTR_PREFETCH, -1);
+echo $dbh->getAttribute(PDO::ATTR_PREFETCH), "\n";
+
+// Verify can fetch
+$s = $dbh->prepare("select dummy from dual" );
+$s->execute();
+while ($r = $s->fetch()) {
+    echo $r[0] . "\n";
+}
+
+echo "Test set PHP_INT_MAX: (Uses default)\n";
+$dbh->setAttribute(PDO::ATTR_PREFETCH, PHP_INT_MAX);
+echo $dbh->getAttribute(PDO::ATTR_PREFETCH), "\n";
 
 // Verify can fetch
 $s = $dbh->prepare("select dummy from dual" );
@@ -31,7 +63,16 @@ echo "Done\n";
 
 ?>
 --EXPECT--
-Test connect: (value is ignored & has no effect)
-Test set: (value is ignored & has no effect)
+Test connect
+101
+X
+Test set 102
+102
+X
+Test set -1: (Uses 0)
+0
+X
+Test set PHP_INT_MAX: (Uses default)
+100
 X
 Done
